--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,30 +3,34 @@ name: Deploy Hugo site
 on:
   push:
     branches:
-      - main  # Trigger when you push to main
+      - main
+
+# 1. FIXED: Added the required permissions for GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
     steps:
-      # Checkout repository
       - uses: actions/checkout@v4
 
-      # Setup Hugo extended (for SCSS/CSS)
       - uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: '0.146.0'
           extended: true
 
-      # Clean old public folder
-      - name: Clean public folder
-        run: rm -rf public
-
-      # Build Hugo site
       - name: Build Hugo
-        run: hugo --minify 
+        run: hugo --minify
 
-      # Deploy to GitHub Pages
-      - uses: actions/deploy-pages@v4
+      # 2. FIXED: Upload the 'public' folder as an artifact first
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          folder: public
+          path: ./public
+
+      # 3. FIXED: Deploy the artifact (No 'folder' input needed here)
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
